https://adempiere.atlassian.net/browse/SPIN-22 * Fixed Error with After Delete on Sales Order